--- a/app/templates/snp/get_snp_plot.html
+++ b/app/templates/snp/get_snp_plot.html
@@ -191,6 +191,11 @@ function check_input_data(info){
     if(info[keys[i]].length == 0){
       msg = keys[i] + ' is empty!';
       return msg;
+    }else if(keys[i] == 'customGroupA' || keys[i] == 'customGroupB'){
+        var pattern = /\s+/g;
+        if(pattern.test(info[keys[i]])){
+            return 'custom group name not allowed includes space.';
+        }
     }
   }
   /*
