--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,7 +1,7 @@
+{% from "auth/_authform.html" import render_field %}
 {% extends 'auth_base.html' %}
 
 {% block css %}
-<link href={{url_for('static', filename='css/login.css')}} rel="stylesheet">
 {% endblock %}
 
 {% block auth %}
@@ -9,43 +9,14 @@
 {% endblock %}
 
 {% block content %}
-<form class="form-signin" action="">
-        <h2 style="text-align: center">sign in</h2>
-        <label class="sr-only">UserName</label>
-        <input id="username" class="form-control" placeholder="Username/Email" required>
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="password" class="form-control" placeholder="Password" required>
-        <div class="checkbox">
-          <label>
-            <input type="checkbox" value="remember-me"> Remember me
-          </label>
-        </div>
-        <button id="submit" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-</form>
+    <h2 style="text-align: center">Sign In</h2>
+    <form class="form" method="post" action="{{ url_for('auth.login') }}">
+        {{ form.csrf_token }}
+        {{ render_field(form.username, placeholder="Username", class_="form-control") }}
+        {{ render_field(form.password, placeholder="Password", class_="form-control") }}
+        <p><input type="submit" class="btn btn-primary" value="submit"></p>
+    </form>
 {% endblock %}
 
 {% block script %}
-    <script src="/static/js/main.js"></script>
-<script>
-  $(document).ready(function(){
-    $("#submit").click(function(event){
-      event.preventDefault();
-      var user = $("#username").val();
-      var password = $("#password").val();
-      if(user == '' || password == ''){
-        createAlert('user and password field required!')
-      }else{
-          var data = JSON.stringify({'user': user, 'password': password})
-          ajaxSend("{{ url_for('auth.login') }}",{'data': data},function(data){
-              var msg = data.msg;
-              if(msg == 'ok'){
-                   window.location.href = "{{ url_for('main.index') }}";
-              }else{
-                  createAlert(msg);
-              }
-          },'post');
-      }
-    });
-  });
-</script>
 {% endblock %}
