--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -81,6 +81,12 @@
 </div>
 <div class="container">
     <div class="myalert"></div>
+    {% for message in get_flashed_messages() %}
+    <div class="alert alert-warning">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        {{ message }}
+    </div>
+    {% endfor %}
   {% block content %}
   {% endblock %}
     <hr/>
