--- a/app/templates/auth_base.html
+++ b/app/templates/auth_base.html
@@ -45,6 +45,12 @@
 
     <div class="container">
      <div class="myalert"></div>
+    {% for message in get_flashed_messages() %}
+        <div class="alert alert-warning">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            {{ message }}
+        </div>
+    {% endfor %}
       {% block content %}
       {% endblock %}
     </div><!-- /.container -->
