--- a/app/templates/cover.html
+++ b/app/templates/cover.html
@@ -21,7 +21,7 @@
 <!-- NAVBAR
 ================================================== -->
   <body>
-  {% if not current_user %}
+  {% if not current_user.is_authenticated %}
   <div class="navbar-wrapper">
       <div class="container">
 
