--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,22 +9,10 @@
     <meta name="author" content="">
 
     <title>show SNP Index1.12</title>
-    <link href={{ url_for('static', filename='datatables/jquery.dataTables.min.css') }} rel="stylesheet">
-    <link href={{ url_for('static', filename='css/jquery.dataTables.min.css') }} rel="stylesheet">
-    <link href={{ url_for('static', filename='datatables/extensions/Buttons/css/buttons.dataTables.min.css') }} rel="stylesheet">
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link href={{ url_for('static', filename='css/bootstrap-select.css') }} rel="stylesheet">
-    <link href={{ url_for('static', filename='css/main.css') }} rel="stylesheet">
-    <script type="text/javascript" src='/static/js/jquery.min.js'></script>
-    <script type="text/javascript" src='/static/js/bootstrap.min.js'></script>
-    <script type="text/javascript" src='/static/datatables/jquery.dataTables.min.js'></script>
-    <script type="text/javascript" src='/static/js/bootstrap-select.js'></script>
-    <script type="text/javascript" src="/static/js/multiselect.min.js"></script>
-    <script type="text/javascript" src='/static/datatables/extensions/Buttons/js/dataTables.buttons.min.js'></script>
-    <script type="text/javascript" src='/static/datatables/extensions/Buttons/js/buttons.colVis.min.js'></script>
-    <script type="text/javascript" src='/static/datatables/extensions/Buttons/js/buttons.flash.min.js'></script>
-    <script type="text/javascript" src='/static/datatables/extensions/Buttons/js/buttons.html5.min.js'></script>
-    <script type="text/javascript" src='/static/datatables/extensions/Buttons/js/buttons.print.min.js'></script>
+    {% assets "css_all" -%}
+        <link rel="stylesheet" href="{{ ASSET_URL }}">
+    {%- endassets %}
     {% block css %}
     {% endblock %}
     <link rel="apple-touch-icon-precomposed" href="{{url_for('static', filename='images/logo_icon.png') }}">
@@ -92,6 +80,9 @@
     </footer>
 </div>
 </body>
+  {% assets "js_all" -%}
+      <script src="{{ ASSET_URL }}"></script>
+  {%- endassets %}
 {% block js %}
 {% endblock %}
 </html>
