--- a/app/templates/cover.html
+++ b/app/templates/cover.html
@@ -10,11 +10,9 @@
     <title>Snp Index Search Tools</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="{{ url_for('static', filename='css/bootstrap.css') }}" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-      <link href="{{ url_for('static', filename='css/carousel.css') }}" rel="stylesheet">
-      <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
+      {% assets 'css_cover' -%}
+          <link rel="stylesheet" href="{{ ASSET_URL }}">
+      {%- endassets %}
   </head>
   <link rel="apple-touch-icon-precomposed" href="{{url_for('static', filename='images/logo_icon.png') }}">
   <link rel="shortcut icon" href="{{ url_for('static', filename='images/logo_icon.png')}}">
