--- a/app/static/css/auth_base.css
+++ b/app/static/css/auth_base.css
@@ -5,3 +5,21 @@ body {
   padding: 40px 15px;
   text-align: center;
 }
+.form-sigin {
+   max-width: 350px;
+   padding: 15px;
+   margin: 0 auto;
+}
+
+.form-sigin p {
+   align: center;
+}
+.form-register {
+   max-width: 400px;
+   padding: 15px;
+   margin: 0 auto;
+}
+
+.form-register p {
+  align: center;
+}
