--- a/app/templates/auth_base.html
+++ b/app/templates/auth_base.html
@@ -21,7 +21,8 @@
 
   <body>
 
-    <nav class="navbar navbar-default navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-inverse">
+        <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
@@ -41,6 +42,7 @@
                 <li><a href='http://www.onmath.com'>Contact</a></li>
             </ul>
         </div><!--/.nav-collapse -->
+        </div>
     </nav>
 
     <div class="container">
