--- a/app/templates/mail/confirm.html
+++ b/app/templates/mail/confirm.html
@@ -2,7 +2,7 @@
 <p>Welcome to <b>SNP INDEX</b>!</p>
 <p>To confirm your account please <a href="{{ url_for('auth.confirm', token=token, _external=True) }}">click here</a>.</p>
 <p>Alternatively, you can paste the following link in your browser's address bar:</p>
-<p>{{ url_for('auth.confirm', token=token, _external=True) }}</p>
+<p><a href={{ url_for('auth.confirm', token=token, _external=True) }}>{{ url_for('auth.confirm', token=token, _external=True) }}</a></p>
 <p>Sincerely,</p>
 <p>The Onmath Team</p>
 <p><small>Note: replies to this email address are not monitored.</small></p>
