add tools pca module

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -48,6 +48,8 @@
                     <li><a href="{{ url_for('tools.locus_identifier_search') }}">Search Locus Identidier Gene</a></li>
                      <li class="divider"></li>
                      <li><a href="{{ url_for('tools.get_snp_plot') }}">Get Snp Index Plot</a></li>
+                    <li class="divider"></li>
+                     <li><a href="{{ url_for('tools.get_pca_plot') }}">Get Pca Plot</a></li>
                 </ul>
               </li>
               <li class="dropdown">
